test/files/neg/t9847.check
t9847.scala:6: warning: discarded non-Unit value of type Int(42)
  def f(): Unit = 42
                  ^
t9847.scala:9: warning: a pure expression does nothing in statement position; multiline expressions might require enclosing parentheses
    1
    ^
t9847.scala:13: warning: a pure expression does nothing in statement position; multiline expressions might require enclosing parentheses
    1
    ^
t9847.scala:14: warning: discarded non-Unit value of type Int(1)
  + 1
  ^
t9847.scala:18: warning: discarded non-Unit value of type Int
    x + 1
      ^
t9847.scala:21: warning: discarded non-Unit value of type Int
  def j(): Unit = x + 1
                    ^
t9847.scala:23: warning: a pure expression does nothing in statement position
  class C { 42 }
            ^
t9847.scala:24: warning: a pure expression does nothing in statement position; multiline expressions may require enclosing parentheses
  class D { 42 ; 17 }
            ^
t9847.scala:24: warning: a pure expression does nothing in statement position; multiline expressions may require enclosing parentheses
  class D { 42 ; 17 }
                 ^
error: No warnings can be incurred under -Werror.
9 warnings
1 error
